# SonarSniffer

./: .gitignore  ARCHITECTURE_DIAGRAM_UNIFIED.md  BEFORE_AFTER_ANALYSIS.md  BETA_CLEAN_PUSH_SUMMARY.md  BRANDING_INTEGRATION_GUIDE.md  CESAROPS_ASSESSMENT.md  CESAROPS_DONATION_INFO.md  CHANGELOG_BETA_CLEAN.md  CHIRP_INTEGRATION_STRATEGY.md  CHIRP_STRATEGY.py  EMAIL_SURVEY_TEMPLATE.md  ENHANCEMENT_CLEANUP_SUMMARY.md  ENHANCEMENT_FINAL_STATUS.md  ENHANCEMENT_QUICK_START.md  ENHANCEMENT_SYSTEM.md  FAILURE_ANALYSIS_SOLUTIONS.md  FAMILY_ACCESS_INFORMATION.md  FINAL_STATUS_REPORT.md  GDAL_DEPLOYMENT_COMPLETE.md  GDAL_DEPLOYMENT_GUIDE.md  GITHUB_DEPLOYMENT.md  GOOGLE_FORMS_TEMPLATE.md  IMPLEMENTATION_ROADMAP_90_DAYS.md  INSTALLATION_DOCUMENTATION_INDEX.md  INSTALLATION_GUIDE.md  INTEGRATION_TIMELINE_AND_NEXT_STEPS.md  MANIFEST.in  OPTIMIZATION_DELIVERY_SUMMARY.md  OPTIMIZATION_FRAMEWORK_GUIDE.py  OPTIMIZATION_QUICK_START.md  OPTIMIZATION_ROADMAP.md  OPTIMIZATION_STATUS_AND_TODO.md  OPTIMIZATION_TESTING_GUIDE.md  PATH_C_DEPLOYMENT_SUMMARY.md  PHASE3_CHECKLIST.md  PHASE3_COMPLETE_START_HERE.md  PHASE3_COMPLETION_SUMMARY.md  PIPELINE_COMPLETION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_INSTALL.md  (+99 more)
.github/: FUNDING.yml
assets/: sonar_sniffer_logo.html  sonar_sniffer_logo_animated.html
branded_web_test_output/: Holloway.RSD.branded.html  Holloway.RSD.geojson  TEST_SUMMARY.md
docs/: CHANGELOG.md  LICENSE  README.md
family_viewer_output/: ACCESS_LINK.html  about.html  help.html  index.html  map_viewer.html  statistics.html
pathc_tiles_output/: PATH_C_SUMMARY.md  mbtiles_viewer.html  sample_survey.geojson
rsd_parser_rust/src/: lib.rs
samples/: B001.SON
sar_platform_core/: MONITORING_README.md  README.md  SAR_PHYSICS_QUICK_REFERENCE.md  batch_processor.py  database_schema.sql  intake.html  intake_api.py  models.py  monitor_server.py  physics_engine.py  sar_platform.db  sar_scenarios.py  start_server_with_monitor.ps1  survey_handler.py  test_physics_engine.py
src/sonarsniffer/: _probe_import.py  advanced_ai_cloud.py  advanced_marine_analytics.py  advanced_target_detection.py  advanced_video_export.py  bathymetric_mapper.py  benchmark_rust.py  benchmark_rust_vs_python.py  block_pipeline.py  block_target_detection.py  build_kml_from_csv.py  cli.py  color_manager.py  colormap_utils.py  competitive_3d_viewer.py  conftest.py  (+74 more)
web/: __init__.py  app.py
(+1 files in other folders)
